--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "docs": "jsdoc -c jsdoc.json",
+    "serve": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
     "mime": "^4.0.4",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "jsdoc": "^4.0.3"
   }
 }
